--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express": "^4.13.3",
     "express-jwt": "^3.3.0",
     "jsonwebtoken": "^5.4.1",
+    "marked": "^0.3.5",
     "mongoose": "^4.2.8",
     "nodemon": "^1.8.1"
   },
