--- a/user_registration_service/package.json
+++ b/user_registration_service/package.json
@@ -13,8 +13,12 @@
     "marked": "^0.3.5",
     "nodemon": "^1.8.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "babel-cli": "^6.23.0",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-stage-2": "^6.22.0"
+  },
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "nodemon server.js --exec babel-node --presets es2015,stage-2"
   }
 }
