--- a/user_location_service/package.json
+++ b/user_location_service/package.json
@@ -14,8 +14,12 @@
     "nodemon": "^1.8.1",
     "redis": "^2.6.5"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "babel-cli": "^6.23.0",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-stage-2": "^6.22.0"
+  },
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "nodemon server.js --exec babel-node --presets es2015,stage-2"
   }
 }
