--- a/user_registration_service/package.json
+++ b/user_registration_service/package.json
@@ -11,7 +11,8 @@
     "express-jwt": "^3.3.0",
     "jsonwebtoken": "^5.4.1",
     "marked": "^0.3.5",
-    "nodemon": "^1.8.1"
+    "nodemon": "^1.8.1",
+    "uuid": "^3.0.1"
   },
   "devDependencies": {
     "babel-cli": "^6.23.0",
