continued cuid and logging implementation

--- a/local.env
+++ b/local.env
@@ -2,3 +2,4 @@ JWT_PASSWORD=gorilla123
 LOCATION_TTL_ENABLED=true
 LOCATION_TTL_VALUE_SECONDS=10
 EXPIRED_LOCATION_CHECK_INTERVAL=10
+LOG_LEVEL=debug
