--- a/authentication_service/package.json
+++ b/authentication_service/package.json
@@ -12,7 +12,8 @@
     "marked": "^0.3.5",
     "mongoose": "^4.2.8",
     "nodemon": "^1.8.1",
-    "uuid": "^3.0.1"
+    "uuid": "^3.0.1",
+    "winston": "^2.3.1"
   },
   "devDependencies": {
     "babel-cli": "^6.23.0",
