--- a/user_location_service/package.json
+++ b/user_location_service/package.json
@@ -14,7 +14,8 @@
     "marked": "^0.3.5",
     "nodemon": "^1.8.1",
     "redis": "^2.6.5",
-    "uuid": "^3.0.1"
+    "uuid": "^3.0.1",
+    "winston": "^2.3.1"
   },
   "devDependencies": {
     "babel-cli": "^6.23.0",
