modified api endpoints

--- a/proxy/haproxy.cfg
+++ b/proxy/haproxy.cfg
@@ -19,13 +19,10 @@ frontend api
 
     mode http
 
-    use_backend user_registration_service if { path_beg /register/ }
-
-    use_backend authentication_service if { path_beg /authenticate/ }
-
-    use_backend user_information_service if { path_beg /users/ }
-
-    use_backend user_location_service if { path_beg /location/ }
+    use_backend user_registration_service if { path_beg /user/register }
+    use_backend authentication_service if { path_beg /user/authenticate/ }
+    use_backend user_information_service if { path_beg /user/user_information/ }
+    use_backend user_location_service if { path_beg /user/location/ }
 
 
 
