--- a/proxy/haproxy.cfg
+++ b/proxy/haproxy.cfg
@@ -20,6 +20,7 @@ frontend api
     mode http
 
     use_backend user_registration_service if { path_beg /user/register }
+    use_backend user_registration_service if { path_beg /user/login }
     use_backend authentication_service if { path_beg /user/authenticate/ }
     use_backend user_information_service if { path_beg /user/user_information/ }
     use_backend user_location_service if { path_beg /user/location/ }
