--- a/proxy/haproxy.cfg
+++ b/proxy/haproxy.cfg
@@ -23,7 +23,7 @@ frontend api
     use_backend user_registration_service if { path_beg /user/login }
     use_backend authentication_service if { path_beg /user/authenticate/ }
     use_backend user_information_service if { path_beg /user/user_information/ }
-    use_backend user_location_service if { path_beg /user/location/ }
+    use_backend location_service if { path_beg /user/location/ }
 
 
 
@@ -36,8 +36,8 @@ backend authentication_service
 backend user_information_service
     server backend1 user_information_service:8080  resolvers docker resolve-prefer ipv4
 
-backend user_location_service
-    server backend1 user_location_service:8080  resolvers docker resolve-prefer ipv4
+backend location_service
+    server backend1 location_service:8080  resolvers docker resolve-prefer ipv4
 
 
 listen admin
