--- a/user_service/package.json
+++ b/user_service/package.json
@@ -11,6 +11,7 @@
     "express-jwt": "^3.3.0",
     "jsonwebtoken": "^5.4.1",
     "marked": "^0.3.5",
+    "mongoose": "^4.2.8",
     "nodemon": "^1.8.1",
     "uuid": "^3.0.1",
     "winston": "^2.3.1"
