removed user_information_service

--- a/proxy/haproxy.cfg
+++ b/proxy/haproxy.cfg
@@ -19,18 +19,18 @@ frontend api
 
     mode http
 
-    use_backend user_information_service if { path_beg /user/register }
-    use_backend user_information_service if { path_beg /user/login }
+    use_backend user_service if { path_beg /user/register }
+    use_backend user_service if { path_beg /user/login }
     use_backend authentication_service if { path_beg /user/authenticate/ }
-    use_backend user_information_service if { path_beg /user/user_information/ }
+    use_backend user_service if { path_beg /user/user_information/ }
     use_backend location_service if { path_beg /user/location/ }
 
 
 backend authentication_service
     server backend1 authentication_service:8080  resolvers docker resolve-prefer ipv4
 
-backend user_information_service
-    server backend1 user_information_service:8080  resolvers docker resolve-prefer ipv4
+backend user_service
+    server backend1 user_service:8080  resolvers docker resolve-prefer ipv4
 
 backend location_service
     server backend1 location_service:8080  resolvers docker resolve-prefer ipv4
