attach user info

--- a/proxy/haproxy.cfg
+++ b/proxy/haproxy.cfg
@@ -23,6 +23,7 @@ frontend api
     use_backend user_service if { path_beg /user/login }
     use_backend authentication_service if { path_beg /user/authenticate/ }
     use_backend user_service if { path_beg /user/user_information/ }
+    use_backend user_service if { path_beg /user/location/nearby }
     use_backend location_service if { path_beg /user/location/ }
 
 
